# pycounts-elshaday

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_elshaday/: __init__.py  plotting.py
tests/: test_plotting.py  test_pycounts_elshaday.py
